=== HEAD

* Add Model#errors_class private method for choosing the errors class on a per-model basis (jeremyevans)

* Add after_initialize plugin for the after_initialize hook (jeremyevans)

* Deprecate Model after_initialize hook (jeremyevans)

* Deprecate passing two arguments to Model.new (jeremyevans)

* Deprecate choosing reciprocal associations with conditions, blocks, or differing primary keys (jeremyevans)

* Deprecate choosing first from ambiguous reciprocal associations (jeremyevans)

* Deprecate validates_type allowing nil values by default (jeremyevans)

* Deprecate the correlated_subquery eager limit strategy (jeremyevans)

* Add hash_aliases extension for making Dataset#select and #from treat hashes as alias specifiers (jeremyevans)

* Deprecate having Dataset#select and #from treat hashes as alias specifiers (jeremyevans)

* Do not automatically convert virtual row block return values to arrays by some Dataset methods (jeremyevans)

* Add filter_having extension for making Dataset#{and,filter,exclude,or} affect the HAVING clause if present (jeremyevans)

* Deprecate Dataset#select_more meaning Dataset#select when called without an existing selection (jeremyevans)

* Deprecate Dataset#and, #or, and #invert raising exceptions for no existing filter (jeremyevans)

* Deprecate Dataset#{and,filter,exclude,or} affecting the HAVING clause (jeremyevans)

* Deprecate passing explicit columns to update as separate arguments to Model#save (jeremyevans)

* Allow specifying explicit columns to update in Model#save via the :columns option (jeremyevans)

* Add ability set the default for join_table's :qualify option via Dataset#default_join_table_qualification (jeremyevans)

* Deprecated :root=>true meaning :root=>:both in the json_serializer (jeremyevans)

* Deprecate core extension usage if the core_extensions have not been explicitly loaded (jeremyevans)

* Deprecate Symbol#{[],<,<=,>,>=} methods when using the core_extensions (jeremyevans)
