@@ -1,5 +1,9 @@
 === HEAD
 
+* Make active_model plugin use an errors class with autovivification (jeremyevans)
+
+* Deprecate Model::Errors#[] autovivification (returning empty array when missing) (jeremyevans)
+
 * Add Model#errors_class private method for choosing the errors class on a per-model basis (jeremyevans)
 
 * Add after_initialize plugin for the after_initialize hook (jeremyevans)
